<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_main_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_dd"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_main_bb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/b_flat_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_f"
        app:layout_constraintTop_toBottomOf="@+id/button_main_b" />

    <Button
        android:id="@+id/button_main_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/b_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_main_e"
        app:layout_constraintTop_toBottomOf="@+id/button_main_a" />

    <Button
        android:id="@+id/button_main_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/c_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_ff"
        app:layout_constraintTop_toBottomOf="@+id/button_main_bb" />

    <Button
        android:id="@+id/button_main_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/c_sharp_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_g"
        app:layout_constraintTop_toBottomOf="@+id/button_main_c" />

    <Button
        android:id="@+id/button_main_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/d_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_gg"
        app:layout_constraintTop_toBottomOf="@+id/button_main_cc" />

    <Button
        android:id="@+id/button_main_dd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_sharp_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_main_a"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_main_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/e_note"
        app:layout_constraintEnd_toStartOf="@+id/button_main_bb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_dd" />

    <Button
        android:id="@+id/button_main_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/f_note"
        app:layout_constraintEnd_toStartOf="@+id/button_main_bb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_e" />

    <Button
        android:id="@+id/button_main_ff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/f_sharp_note"
        app:layout_constraintEnd_toStartOf="@+id/button_main_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_f" />

    <Button
        android:id="@+id/button_main_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/g_note"
        app:layout_constraintEnd_toStartOf="@+id/button_main_cc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_ff" />

    <Button
        android:id="@+id/button_main_gg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/g_sharp_note"
        app:layout_constraintEnd_toStartOf="@+id/button_main_d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_g" />

    <Button
        android:id="@+id/button_main_simpleSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Simple Song"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />
</androidx.constraintlayout.widget.ConstraintLayout>